--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,17 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <!-- <dependency>
+                <groupId>org.eclipse.microprofile.metrics</groupId>
+                <artifactId>microprofile-metrics-api</artifactId>
+                <version>${microprofile-metrics.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.kumuluz.ee.metrics</groupId>
+                <artifactId>kumuluzee-metrics-core</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency> -->
         </dependencies>
     </dependencyManagement>
 
